// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base components / bc-heading GroupedHeading smoke-test 2`] = `
<hgroup>
  <h1 class="font-normal text-5xl text-slate-800">
    Heading 1
  </h1>
  <h2 class="font-normal text-4xl text-slate-800">
    Heading 2
  </h2>
</hgroup>
`;

exports[`base components / bc-heading Typography smoke-test 2`] = `
<div>
  <h1 class="font-normal text-5xl text-slate-800">
    Heading 1
  </h1>
  <h2 class="font-normal text-4xl text-slate-800">
    Heading 2
  </h2>
  <h3 class="font-medium text-3xl text-slate-800">
    Heading 3
  </h3>
  <h4 class="font-normal text-2xl text-slate-800">
    Heading 4
  </h4>
  <h5 class="font-bold text-xl text-slate-800">
    Heading 5
  </h5>
  <h6 class="font-normal text-xl text-slate-800">
    Heading 6
  </h6>
</div>
`;

exports[`base components / bc-heading WithSubtitle smoke-test 2`] = `
<hgroup>
  <h1 class="font-normal text-5xl text-slate-800 mb-2">
    Heading 1
  </h1>
  <p class="text-base font-medium">
    Some subtitle
  </p>
</hgroup>
`;
